@@ -24,33 +24,33 @@ seqsammeha(samm, spell, typology, persper = TRUE)
   \item{x}{A SAMM object produced by \code{seqsamm}}
   \item{samm}{A SAMM object produced by \code{seqsamm}.}
   \item{type}{the type of the plot \code{\link{seqplot}}. Default "d" for state distribution plots (chronograms).}
-  \item{spell}{Character. The (ending) spell in a given spell to consider. It should be one of the state of the \code{\link{alphabet}} of the sequences. A spell is a series of time points in the same state.}
+  \item{spell}{Character. The (ending) spell in a given spell to consider. It should be one of the states of the \code{\link{alphabet}} of the sequences. A spell is a series of time points in the same state.}
   \item{typology}{Factor or character. The typology of the trajectories out of the specified ending \code{spell} generated by a cluster analyses (see example). It should contain one observation per observed ending spell.}
   \item{persper}{Logical. If \code{TRUE}, the data are returned in person-period format. Otherwise, only one line per observed spell is returned.}
   \item{...}{additional plot parameters passed to \code{\link{seqplot}}.}
 }
 \details{
-The Sequence Analysis Multistate Model (SAMM) procedure works in three steps. First, the subsequences over a given time span \code{sublength} following any transition out of (exit from) a spell in any given state of the alphabet state along  the trajectories (\code{seqdata}) are extracted. This step is achieved using the \code{seqsamm} function. Each subsequence starts with the last time-point of the spell in a given state. Second, these sub-sequences are clustered using SA to identify typical sub-sequences of medium-term changes. This is achieved separately for each ending spell (see \code{spell} argument). The \code{seqsammseq} function can be used to retrieve the sub-trajectories following each ending spell. Third, multistate models are used to estimate the chance (or risk) to end a spell in a given spell by distinguishing the type of trajectory that follows (and identified with cluster analysis). This allows estimating the effect of covariates on the chances to start each type of sub-sequence. The \code{seqsammeha} prepare the data to estimate the competing risk models for each ending spell. Then usual competing risks models can be used.
+The Sequence Analysis Multistate Model (SAMM) procedure works in three steps. First, the substrings over a given time span \code{sublength} following any transition out of (exit from) a spell in a given state of the alphabet are extracted from the trajectories \code{seqdata}. This step is achieved using the \code{seqsamm} function. Each substring starts with the last time-point of the spell in the state. Second, these substrings are clustered using SA to identify typical substrings of medium-term changes. This is achieved separately for each ending spell (see \code{spell} argument). The \code{seqsammseq} function can be used to retrieve the sub-trajectories following each ending spell. Third, multistate models are used to estimate the chance (or risk) to end a spell in a given spell by distinguishing the type of trajectory that follows (and identified with cluster analysis). This allows estimating the effect of covariates on the chances to start each type of sub-sequence. The \code{seqsammeha} prepare the data to estimate the competing risk models for each ending spell. Then usual competing risks models can be used.
 
 Generally speaking, the SAMM procedure allows studying the time spent in each state as well as the patterns of medium-term changes after an exit from that state appears along the trajectories. The example section below provides a step by step example of how to use it.
 }
 \value{
-The \code{seqsamm} function returns a SAMM object, storing the reorganized data as person period.
+A \code{SAMM} object (data.frame), storing the reorganized data in person period form. Column variables are:
 \item{id}{Numeric. The ID of the observation as the row number in the original \code{seqdata}.}
 \item{time}{Numeric. The time unit of the current observation (from the beginning of the original sequence).}
 \item{begin}{Numeric. The time of the beginning of the current spell (from the beginning of the original sequence).}
 \item{spell.time}{Numeric. The time elapsed from the beginning of the current spell.}
 \item{transition}{Logical. Whether a transition out of the current spell occurred within this time unit.}
-\item{s.1 until s.\code{sublength}...}{The state sequence following the current observation starting from 1 (current state) until \code{sublength} time units after the current observation.}
-\item{lastobs}{Logical. Whether this is the last observation of the current spell, censored or not. This is useful when one want only one row per individual, for instance to plot survival curves (see example).}
+\item{s.1 until s.sublength}{The state sequence following the current observation starting from 1 (current state) until \code{sublength} time units after the current observation.}
+\item{lastobs}{Logical. Whether this is the last observation of the current spell, censored or not. This is useful when one wants only one row per individual, for instance to plot survival curves (see example).}
 \item{x}{object of class \code{SAMM} as produced by \code{seqsamm}}
 \item{Optional covariate list}{The covariates provided with the \code{covar} argument.}
 
-The function \code{seqsammseq} returns a sequence object (see \code{\link{seqdef}}) of the trajectories following an ending spell.
+The function \code{seqsammseq} returns an \code{stslist} sequence object (see \code{\link{seqdef}}) of the trajectories following an ending spell.
 
-The function \code{seqsammeha} returns a \code{data.frame} storing the person period data of a specific ending \code{spell} (see \code{spell} argument) considering the given \code{typology} as competing risks (see \code{typology} argument). Several variables are added to the SAMM objects (see above):
-\item{SAMMtypology}{factor. The events ending the specified spell using \code{"None"} when not event occurs.}
-\item{SAMM...}{Logical. A logical vector specifying whether the current observation end the spell with the following \code{...} type of trajectory.}
+The function \code{seqsammeha} returns a \code{data.frame} storing the person period data of a specific ending \code{spell} (see \code{spell} argument) considering the given \code{typology} as competing risks (see \code{typology} argument). Several variables are added to the \code{SAMM} objects (see above):
+\item{SAMMtypology}{Factor. The events ending the specified spell using \code{"None"} when no event occurs.}
+\item{SAMM...}{Logical. A logical vector specifying whether the current observation ends the spell with the following \code{...} type of trajectory.}
 }
 \seealso{\code{\link{seqcta}}, \code{\link{seqsha}}
 }
