@@ -1,8 +1,13 @@
-                CHANGES IN TraMineRextras VERSION 0.7.4 [2022-01-20] (Development version)
-                
-Misc.:
-    o   No changes
-    
+                CHANGES IN TraMineRextras VERSION 0.7.4 [2022-06-13] (Development version)
+
+Changes in existing functions:
+    o   seqplot.rf() gains a new argument 'plus.one' to control which 
+        group sizes to increase when number of sequences is not a multiple of number of groups.
+        
+Bug fixes:
+    o   seqindic.dyn() checked whether fstat is a function by comparing class with a string. Now uses inherits.
+    o   Issue with non literal item name in seqsamm.Rd.
+
 
                 CHANGES IN TraMineRextras VERSION 0.6.3 [2022-01-19]
 
